--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="header">
-	<a href="#" class="logo">Jayshri Raman.<span class="animate" style="--i:1;"></span></a>
+	<a href="https://drive.google.com/file/d/1-ib2k9i_CDUIDX6g5BJ3_7Oizf4GcAYp/view?usp=sharing" class="logo">Jayshri Raman.<span class="animate" style="--i:1;"></span></a>
 	<div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 	
 	<nav class="navbar" id="navbar">
@@ -37,7 +37,7 @@
 		<span class="animate" style="--i:4;"></span></p>
 		<div class="btn-box">
 			<a href="mailto:jayshriraman07@gmail.com" class="btn">Hire Me</a>
-			<a href="" class="btn">Let's Me</a>
+			<a href="https://drive.google.com/file/d/1-ib2k9i_CDUIDX6g5BJ3_7Oizf4GcAYp/view?usp=sharing" class="btn">Let's Me</a>
 			<span class="animate" style="--i:5;"></span>
 	    </div>
 	</div>
