--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@ During my academic journey, I acquired a solid foundation in HTML, CSS, and Java
 <section class="cards-wrapper">
   <div class="card-grid-space">
     <div class="num">01</div>
-    <a class="card" href="https://jayshri-raman.github.io/REACT/" style="--bg-img: url(1.png)">
+    <a class="card" href="https://jayshri-raman.github.io/youtube/" style="--bg-img: url(1.png)">
       <div>
-        <h1>Landing Page</h1>
+        <h1>Youtube Clone</h1>
         <br>
        
         <div class="tags">
