--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="home-content">
 		<h1>Hi, I'm <span>Jayshri Raman</span><span class="animate" style="--i:2;"></span></h1>
 		<div class="text-animate">
-			<h3>Frontend Developer</h3>
+			<h3>Application Developer</h3>
 			<span class="animate" style="--i:3;"></span>
 		</div>
 		<p> Results-driven web developer passinat in designing and implementing responsive and user-centric websites. Proficient in front-end and back-end technologies, I bring a unique blend of technical expertise and creative problem-solving to every project.
@@ -141,17 +141,17 @@ During my academic journey, I acquired a solid foundation in HTML, CSS, and Java
 		         </div>
 
 		         <div class="progress">
-					<h3>C<span>80%</span></h3>
+					<h3>C<span>70%</span></h3>
 					<div class="bar"><span style="width: 80%;"></span></div>
 		         </div>
 
 		         <div class="progress">
-					<h3>Java<span>75%</span></h3>
+					<h3>Java<span>80%</span></h3>
 					<div class="bar"><span style="width: 65%;"></span></div>
 		         </div>
 
 		         <div class="progress">
-					<h3>React<span>50%</span></h3>
+					<h3>React<span>70%</span></h3>
 					<div class="bar"><span style="width: 50%;"></span></div>
 
 		         </div>
@@ -191,7 +191,7 @@ During my academic journey, I acquired a solid foundation in HTML, CSS, and Java
 <section class="cards-wrapper">
   <div class="card-grid-space">
     <div class="num">01</div>
-    <a class="card" href="https://jayshri-raman.github.io/youtube/" style="--bg-img: url(1.png)">
+    <a class="card" href="https://jayshri-raman.github.io/youtube/" style="--bg-img: url(youtube.jpg)">
       <div>
         <h1>Youtube Clone</h1>
         <br>
@@ -204,13 +204,13 @@ During my academic journey, I acquired a solid foundation in HTML, CSS, and Java
   </div>
   <div class="card-grid-space">
     <div class="num">02</div>
-    <a class="card" href="https://jayshri-raman.github.io/Calculator-with-Voice-Assistant/" style="--bg-img: url(2.png)">
+    <a class="card" href="https://willowy-dusk-e52458.netlify.app" style="--bg-img: url(netflix.jpg)">
       <div>
-        <h1>Calculator with Voice Assistant</h1>
+        <h1>Netflix Clone</h1>
         <br>
        
         <div class="tags">
-          <div class="tag">HTML/CSS/JS</div>
+          <div class="tag">REACT+FIREBASE</div>
         </div>
       </div>
     </a>
